# repro

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  BUILD.x86_64-unknown-linux-gnu  DEPS.bzl  README.md  WORKSPACE  cc_toolchain_config.bzl.tmpl  file1.go  file2.go  foo.cc  toolchain.bzl
jemalloc/: configure.ac
jemalloc/src/: zone.c
pkg/testutils/skip/: BUILD.bazel  skip.go
pkg/util/: BUILD.bazel
pkg/util/envutil/: BUILD.bazel
pkg/util/uuid/: BUILD.bazel  codec_test.go
