load("@bazel_gazelle//:def.bzl", "gazelle")
load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_path")

go_library(
    name = "repro",
    srcs = [
        "file1.go",
        "file2.go",
    ],
    importpath = "github.com/rickystewart/repro",
    visibility = ["//visibility:public"],
)

go_path(
    name = "go_path",
    mode = "link",
    deps = [
        ":repro",
    ],
)

# gazelle:prefix github.com/rickystewart/repro
# gazelle:build_file_name BUILD.bazel

gazelle(
    name = "gazelle",
    prefix = "github.com/rickystewart/repro",
)
