load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "uuid",
    importpath = "github.com/cockroachdb/cockroach/pkg/util/uuid",
    visibility = ["//visibility:public"],
)

go_test(
    name = "uuid_test",
    srcs = [
        "codec_test.go",
    ],
    embed = [":uuid"],
    deps = [
        "//pkg/testutils/skip",
    ],
)
